<resources>
    <string name="app_name">JuniorTest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--  Strings for the toolbar  -->
    <string name="action_settings">Settings</string>
    <string name="action_about_me">About Me</string>

    <!--  Strings for the toolbar  -->
    <string name="aboutme_fragment_title">Say something about me!</string>

    <!--  Strings for the 'Single' section of activity_main_drawer  -->
    <string name="menu_single_title">Single</string>

    <string name="camera_fragment_title">Camera Fragment!</string>
    <string name="camera_button_text">Click Me!</string>
    <string name="menu_camera_title">Camera</string>

    <string name="gallery_fragment_title">Gallery Fragment!</string>
    <string name="menu_gallery_title">Gallery</string>

    <string name="slideshow_fragment_title">Slideshow fragment!</string>
    <string name="menu_slideshow_title">Slideshow</string>

    <string name="settings_button_text">Settings</string>
    <string name="tools_fragment_title">Settings fragment!</string>
    <string name="menu_settings_title">Settings</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_email_address">Set email address</string>
    <string name="pref_email_address_summary">Set your email address</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>

    <!--  Strings for the 'Communicate' section of activity_main_drawer  -->
    <string name="menu_communicate_title">Communicate</string>

    <string name="share_fragment_title">Select images to share!</string>
    <string name="menu_share_title">Share</string>

    <string name="send_fragment_title">Send fragment!</string>
    <string name="menu_send_title">Send</string>
</resources>

